--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
      container_name: db
      volumes:
        - "db-data:/var/lib/postgresql/data"
-   web:
+   manifest:
      build: ./manifest
      command: python manage.py runserver 0.0.0.0:8000
      volumes:
