--- a/manifest/Dockerfile
+++ b/manifest/Dockerfile
@@ -4,3 +4,6 @@ WORKDIR /app
 ADD requirements.txt /app/requirements.txt
 RUN pip install -r requirements.txt
 ADD . /app
+
+COPY ./docker-entrypoint.sh /
+ENTRYPOINT ["/docker-entrypoint.sh"]
