--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
        - "db-data:/var/lib/postgresql/data"
    web:
      build: ./web
+     command: python manage.py runserver 0.0.0.0:8000
      volumes:
        - ./web:/app
      ports:
