--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -5,5 +5,5 @@ ADD requirements.txt /app/requirements.txt
 RUN pip install -r requirements.txt
 ADD . /app
 
-COPY ./docker-entrypoint.sh /
-ENTRYPOINT ["/docker-entrypoint.sh"]
+#COPY ./docker-entrypoint.sh /
+#ENTRYPOINT ["/docker-entrypoint.sh"]
