Restructue project so that it is easier to deploy and manage in the future

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:3.5
 ENV PYTHONUNBUFFERED 1
 WORKDIR /app
-ADD requirements.txt /app/requirements.txt
-RUN pip install -r requirements.txt
+ADD requirements/base.txt /app/requirements/base.txt
+RUN pip install -r requirements/base.txt
 ADD . /app
 
 #COPY ./docker-entrypoint.sh /
