--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
    web:
      build: ./web
      command: python manage.py runserver 0.0.0.0:8000
+     environment:
+      - DJANGO_SETTINGS_MODULE=manifest.settings.dev
      volumes:
        - ./web:/app
      ports:
