Add debug_toolbar and set env to dev for now

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:3.5
 ENV PYTHONUNBUFFERED 1
 WORKDIR /app
-ADD requirements/base.txt /app/requirements/base.txt
-RUN pip install -r requirements/base.txt
+ADD requirements/*.txt /app/requirements/
+RUN pip install -r requirements/dev.txt
 ADD . /app
 
 #COPY ./docker-entrypoint.sh /
