--- a/stage.yml
+++ b/stage.yml
@@ -9,10 +9,10 @@ services:
      build:
        context: ./web
        args:
-         env: dev
+         env: stage
      command: python manage.py runserver 0.0.0.0:8000
      environment:
-      - DJANGO_SETTINGS_MODULE=config.settings.dev
+      - DJANGO_SETTINGS_MODULE=config.settings.stage
      volumes:
        - ./web:/app
      ports:
