Add Github credentials

--- a/web/config/settings/secret.py.example
+++ b/web/config/settings/secret.py.example
@@ -1,2 +1,7 @@
 class Secret:
     SECRET_KEY = "SECRET KEY GOES HERE"
+
+    # Social Auth
+    SOCIAL_AUTH_GITHUB_KEY = 'Client ID goes here'
+    SOCIAL_AUTH_GITHUB_SECRET = 'Client Secret goes here'
+
