--- a/web/config/settings/secret.py.example
+++ b/web/config/settings/secret.py.example
@@ -4,4 +4,5 @@ class Secret:
     # Social Auth
     SOCIAL_AUTH_GITHUB_KEY = 'Client ID goes here'
     SOCIAL_AUTH_GITHUB_SECRET = 'Client Secret goes here'
-
+    SOCIAL_AUTH_TWITTER_KEY = ''
+    SOCIAL_AUTH_TWITTER_SECRET = ''
