--- a/web/config/settings/secret.py.example
+++ b/web/config/settings/secret.py.example
@@ -6,3 +6,5 @@ class Secret:
     SOCIAL_AUTH_GITHUB_SECRET = 'Client Secret goes here'
     SOCIAL_AUTH_TWITTER_KEY = ''
     SOCIAL_AUTH_TWITTER_SECRET = ''
+    SOCIAL_AUTH_FACEBOOK_KEY = ''
+    SOCIAL_AUTH_FACEBOOK_SECRET = ''
