Get frontend data volumes to behave properly and set up gulpfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,9 @@ services:
      build:
        context: .
        dockerfile: ./frontend/Dockerfile
-     command: gulp
+       args:
+         env: dev
+     command: npm install -q & gulp watch
      volumes:
        - ./web/ksupcapp/static:/static
        - ./frontend:/src
