--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,9 @@
     "gulp-cssnano": "2.1.2",
     "gulp-sass": "2.3.2",
     "gulp-uglify": "2.0.0",
-    "lodash": "4.17.2"
+    "gulp-rename": "1.2.2",
+    "gulp-plumber": "1.1.0",
+    "gulp-pixrem": "1.0.0",
+    "run-sequence": "1.2.2"
   }
 }
