Use env variable, not dockerfile ARG

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
      build:
        context: .
        dockerfile: ./frontend/Dockerfile
-       args:
-         env: dev
+     environment:
+       - ENV=dev
      command: sh -c "npm -q install && gulp watch"
      volumes:
        - ./web/ksupcapp/static:/static
